tests/gabc-dump/should-fail/bad-hepisema-5.gabc
name: bad horizontal episema (5);
%%
(c4) (:__)
